--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.4",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+      "jade": "1.x"
   }
 }
